src/objects/Apttus_Config2__PriceListItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__RelatedItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related price list item</description>
        <label>Related Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Related Price List Items</relationshipLabel>
        <relationshipName>RelatedPriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedPercentAppliesTo__c</fullName>
        <description>Indicates the price field the percentage should be applied to</description>
        <label>Percent Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>Base Extended Price</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedPercent__c</fullName>
        <description>The list price expressed as a percentage of the related price list item</description>
        <label>Percent</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RevRecPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the revenue recognition policy for the product or service</description>
        <label>Revenue Recognition Policy</label>
        <referenceTo>Apttus_Config2__RevRecPolicy__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>PriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RevenueSplitPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated order revenue split/merge policy</description>
        <inlineHelpText>ID of the associated order revenue split/merge policy</inlineHelpText>
        <label>Revenue Split/Merge Policy</label>
        <referenceTo>Apttus_Config2__RevenueSplitPolicy__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>PriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupPriceToBundle__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the option price is rolled up to the bundle. Only applicable to product options.This field is deprecated. Use the Price Included in Bundle field instead.</description>
        <inlineHelpText>Indicates whether the quantity is auto updated when the default quantity field gets a new value</inlineHelpText>
        <label>Auto Update Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SalesOrderQuantity__c</fullName>
        <description>The Total quantity for which sales orders have already been created against the contract price list Item</description>
        <inlineHelpText>The Total quantity for which sales orders have already been created against the contract price list Item</inlineHelpText>
        <label>Sales Order Quantity (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The charge type sequence</description>
        <inlineHelpText>The charge type sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SubType__c</fullName>
        <description>The price list item sub type</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the price item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the price item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>PriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price item is taxable</description>
        <inlineHelpText>Indicates whether the price item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The price list item type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UBARAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the unbilled A/R account rule</description>
        <inlineHelpText>ID of the unbilled A/R account rule</inlineHelpText>
        <label>Unbilled A/R Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Unbilled A/R Account</value>
            </filterItems>
            <infoMessage>Please select an Unbilled A/R Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Price List Items (Unbilled A/R Account)</relationshipLabel>
        <relationshipName>PriceListItemsUBAR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UBAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the unbilled deferred account rule</description>
        <inlineHelpText>ID of the unbilled deferred account rule</inlineHelpText>
        <label>Unbilled Deferred Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Unbilled Deferred Account</value>
            </filterItems>
            <infoMessage>Please select an Unbilled Deferred Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Price List Items (Unbilled Deferred Account)</relationshipLabel>
        <relationshipName>PriceListItemsUB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <description>LC-8998: Used to perform data migration</description>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Key_Generator__c</fullName>
        <description>LC-8998: Used for master data key generation</description>
        <displayFormat>PLI-{00000}</displayFormat>
        <label>Migration Key Generator</label>
        <type>AutoNumber</type>
    </fields>
    <label>Price List Item</label>
    <nameField>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>